--- a/Projects/project1_colorSwitcher/index.html
+++ b/Projects/project1_colorSwitcher/index.html
@@ -7,17 +7,17 @@
     <title>Color Switcher Application</title>
 </head>
 <body>
+     <h1>Color Switcher Application</h1>
       <div class="canvas">
-      <h1>Color Switcher Application</h1>
-      <span class="button" id="gray"></span>
-      <span class="button" id="red"></span>
-      <span class="button" id="pink"></span>
-      <span class="button" id="blue"></span>
-     <h2>
-      Try Clicking color on above Box
-     <span>To change the background color of the page</span>
-    </h2>
+      <div class="button" id="gray"></div>
+      <div class="button" id="red"></div>
+      <div class="button" id="pink"></div>
+      <div class="button" id="blue"></div>
     </div>
+    <h2>
+       Try Clicking color on above Box
+       <span>To change the background color of the page</span>
+      </h2>
     <script src="index.js"></script>
 </body>
 </html>
